# ai-agents

./: .PSScriptAnalyzerSettings.psd1  .actrc  .cleanup.md  .coderabbit.yaml  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .mcp.json  .qualityrc.json  .worktreeinclude  .yamllint.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CRITICAL-CONTEXT.md  FINAL-SUMMARY-CODERABBIT-OPTIMIZATION.md  ORPHANED-AGENTS-ANALYSIS.md  README.md  RELEASING.md  SKILL-QUICK-REF.md  SOUL.md  THIRD-PARTY-NOTICES.TXT  USING-AGENTS.md  agent.yaml  all-comments.json  conftest.py  copilot-instructions.md  direct-reports-extraction-prompt.md  memory_enhancement  pyproject.toml  renovate.json  unreplied-comments.json
.agents/: .session-complete  2026-01-05-merge-velocity-improvement-plan.md  AGENT-INSTRUCTIONS.md  AGENT-SYSTEM.md  AGENTS.md  HANDOFF-archive-001.md  HANDOFF.md  README.md  SESSION-END-PROMPT.md  SESSION-PROTOCOL.md  SESSION-START-PROMPT.md  pr-batch-review-session-2025-12-20.md  pr-description-updated.md  recovery-hints.yaml  workflow-context.json
.baseline/: coverage-thresholds.json  coverage-thresholds.schema.json
.claude/: settings.json
.claude-mem/: .gitignore
.claude-plugin/: marketplace.json
.config/: wt.toml
.diffray/: README.md  config.yaml
.empirica/: config.yaml  project.yaml
.factory/: mcp.json
.gemini/: config.yaml  styleguide.md
.githooks/: commit-msg  pre-commit  pre-push
.github/: AGENTS.md  CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  bot-authors.yml  copilot-code-review.md  copilot-instructions.md  dependabot.yml  labeler.yml
.serena/: .gitignore  .token-cache.json  project.yml
claude/: analyst.md  architect.md  create-explainer.md  critic.md  csharp-expert.md  csharp-pod.md  devops.md  explainer.md  feature-request-review.md  generate-tasks.md  high-level-advisor.md  implementer.md  independent-thinker.md  memory.md  orchestrator.md  planner.md  pr-comment-responder.md  qa.md  retrospective.md  roadmap.md  security.md  skillbook.md  task-generator.md
copilot-cli/: analyst.agent.md  architect.agent.md  critic.agent.md  devops.agent.md  explainer.agent.md  implementer.agent.md  orchestrator.agent.md  planner.agent.md  pr-comment-responder.agent.md  qa.agent.md  retrospective.agent.md  roadmap.agent.md  security.agent.md  skillbook.agent.md  task-generator.agent.md
docs/: COST-GOVERNANCE.md  SEMANTIC_INDEX.yaml  SKILL-AUTHORING.md  WORKFLOW-VALIDATION.md  agent-catalog.md  agent-governance.md  agent-metrics.md  architecture.md  autonomous-issue-development.md  autonomous-pr-monitor-v2.md  autonomous-pr-monitor.md  bot-account-setup.md  codeql-architecture.md  codeql-integration.md  codeql-rollout-checklist.md  copilot-cli-setup.md  customization.md  getting-started.md  github-api-capabilities.md  ideation-workflow.md  installation.md  markdown-linting.md  mcp-ecosystem.md  merge-guards.md  orchestrator-routing-algorithm.md  project-structure.md  release-notes-styleguide.md  search-dont-load.md  skill-output-standard.md  skill-reference.md  task-classification-guide.md  technical-guardrails.md  third-party-license-attribution.md  when-to-use.md  workflow-commands.md
evals/: README.md  agent-triage.md  baseline-report.md  pr2126-eval-results.md  skill-triage.md
memory_enhancement/: __init__.py  __main__.py  graph.py  models.py
scripts/: AGENTS.md  CLAUDE.md  Check-SkillExists.ps1  Convert-IndexTableLinks.ps1  Convert-MemoryReferences.ps1  Convert-SessionToJson.ps1  Detect-SkillViolation.ps1  Detect-TestCoverageGaps.ps1  Extract-SessionEpisode.ps1  Fix-PR964-Validation.ps1  Get-LatestSemanticMilestone.ps1  Import-ClaudeMemMemories.ps1  Improve-MemoryGraphDensity.ps1  Invoke-BatchPRReview.ps1  Invoke-CodexSessionStartGate.ps1  Invoke-PRMaintenance.ps1  Invoke-SessionStartGate.ps1  Measure-MemoryPerformance.ps1  MemoryRouter.psm1  New-ValidatedPR-old.ps1  New-ValidatedPR.ps1  Normalize-LineEndings.ps1  README.md  ReflexionMemory.psm1  Review-MemoryExportSecurity.ps1  Set-ItemMilestone.ps1  Split-BundledSkills.ps1  Sync-McpConfig.ps1  Test-WorkflowLocally.ps1  Update-CausalGraph.ps1  Update-ReviewerSignalStats.ps1  Validate-ActionSHAPinning.ps1  Validate-Consistency.ps1  Validate-MemoryIndex.ps1  Validate-PRDescription.ps1  Validate-PrePR.ps1  Validate-Session.ps1  Validate-SessionEnd.ps1  Validate-SessionJson.ps1  Validate-SessionProtocol.ps1  (+79 more)
src/: AGENTS.md  STYLE-GUIDE.md  agent-registry-schema.ts
templates/: AGENTS.md  README.md  marketplace-counters.yaml  toolsets.yaml
tests/: Add-CommentReaction.Tests.ps1  Add-PRReviewThreadReply.Tests.ps1  Check-SkillExists.Tests.ps1  CodeQL-Integration.Tests.ps1  Complete-SessionLog.Tests.ps1  Convert-IndexTableLinks.Tests.ps1  Convert-MemoryReferences.Tests.ps1  Convert-SessionToJson.Tests.ps1  Detect-ADRChanges.Tests.ps1  Detect-CopilotFollowUpPR.Tests.ps1  Detect-SkillViolation.Tests.ps1  Detect-TestCoverageGaps.Tests.ps1  Diagnose-SessionProtocol.Tests.ps1  Extract-SessionEpisode.Tests.ps1  Extract-SessionTemplate.Tests.ps1  Generate-Agents.Tests.ps1  Get-AgentHistory.Tests.ps1  Get-AllPRsWithComments.Tests.ps1  Get-LatestSemanticMilestone.Tests.ps1  Get-ValidationErrors.Tests.ps1  GitHelpers.Tests.ps1  HookUtilities.Tests.ps1  Improve-MemoryGraphDensity.Tests.ps1  Install-CodeQL.Tests.ps1  Install-CodeQLIntegration.Tests.ps1  Integration-PRMaintenance.Tests.ps1  InvestigationAllowlist.Tests.ps1  Invoke-ADRChangeDetection.Tests.ps1  Invoke-ADRReviewGuard.Tests.ps1  Invoke-AutonomousExecutionDetector.Tests.ps1  Invoke-CodeQLScan.Tests.ps1  (+353 more)
(+7263 files in other folders)
