[project]
name = "ai-agents"
version = "0.1.0"
description = "AI agent orchestration framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "anthropic==0.86.0",
    "markdown-it-py>=3.0.0",
    "python-frontmatter==1.1.0",
    "PyYAML==6.0.3",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".", ".claude/skills/memory-enhancement/src"]
include = ["scripts*", "scripts.memory_sync*", "scripts.hook_utilities*", "scripts.test_result_helpers*", "scripts.pr_maintenance*", "scripts.github_core*", "scripts.ai_review_common*", "scripts.validation*", "scripts.workflow*", "memory_enhancement*"]

[tool.pytest.ini_options]
testpaths = ["tests", "test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security-focused tests",
]

[tool.coverage.run]
source = [".claude", "scripts", "scripts/memory_sync", ".claude/skills/memory-enhancement/src/memory_enhancement"]
omit = ["**/tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = [".venv", "tests", ".git"]
skips = []

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "ANN"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# sys.path manipulation required before imports for plugin-context path resolution
".claude/skills/github/scripts/**/*.py" = ["E402"]
# Test files use sys.path.insert() before importing modules under test
"tests/hooks/**/*.py" = ["E402"]
"tests/skills/**/*.py" = ["E402"]
# Test files: suppress annotation requirements (pre-existing, Phase 1 triage)
"tests/**/*.py" = ["ANN"]
".claude/skills/*/tests/**/*.py" = ["ANN"]
"packages/*/tests/**/*.py" = ["ANN"]
# Pre-existing production code without full annotations (Phase 1 triage per #1188)
".claude/skills/SkillForge/scripts/*.py" = ["ANN"]
".claude/skills/SkillForge/assets/templates/*.py" = ["ANN"]
".claude/hooks/Stop/*.py" = ["ANN"]
".claude/skills/incoherence/scripts/*.py" = ["ANN"]
".claude/skills/context-optimizer/scripts/*.py" = ["ANN"]
".claude/skills/memory/scripts/*.py" = ["ANN"]
".claude/skills/style-enforcement/scripts/*.py" = ["ANN"]
".claude/skills/analyze/scripts/*.py" = ["ANN"]
".claude/skills/buy-vs-build-framework/scripts/*.py" = ["ANN"]
".claude/skills/cva-analysis/scripts/*.py" = ["ANN"]
".claude/skills/decision-critic/scripts/*.py" = ["ANN"]
".claude/skills/doc-coverage/scripts/*.py" = ["ANN"]
".claude/skills/planner/scripts/*.py" = ["ANN"]
".claude/skills/security-scan/scripts/*.py" = ["ANN"]
"packages/semantic-hooks/src/**/*.py" = ["ANN"]
"scripts/validate_workflows.py" = ["ANN"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
ignore_missing_imports = true
